jszt/ingress/star_topen_onewo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  name: demo-app
spec:
  tls:
  - hosts:   
    - demo.topen.onewo.com
    secretName: wildcard.topen.onewo.com-tls
  rules:
  - host: demo.topen.onewo.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: demo-app
            port:
              number: 8080
        pathType: ImplementationSpecific
